--- a/app/src/main/res/layout/activity_contact.xml
+++ b/app/src/main/res/layout/activity_contact.xml
@@ -135,7 +135,7 @@
             android:layout_width="match_parent"
             android:layout_height="388dp"
             android:contentDescription="location"
-            android:src="@drawable/Location_ff" />
+            android:src="@drawable/location_ff" />
 
     </LinearLayout>
 
