--- a/app/src/main/res/layout/test.xml
+++ b/app/src/main/res/layout/test.xml
@@ -63,9 +63,9 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal"
+            android:layout_marginTop="20dp"
             android:gravity="center"
-            android:layout_marginTop="20dp">
+            android:orientation="horizontal">
 
             <!-- Cancel Button -->
             <Button
@@ -74,17 +74,17 @@
                 android:text="Cancel"
 
                 android:textColor="#FF7622"
-                android:textSize="12sp"/>
+                android:textSize="12sp" />
 
             <!-- Track Order Button -->
             <Button
                 android:layout_width="139dp"
                 android:layout_height="38dp"
-                android:text="Track Order"
-                android:backgroundTint="#FF7622"
-                android:textColor="@android:color/white"
                 android:layout_marginStart="16dp"
-                android:textSize="12sp"/>
+                android:backgroundTint="#FF7622"
+                android:text="Track Order"
+                android:textColor="@android:color/white"
+                android:textSize="12sp" />
         </LinearLayout>
     </LinearLayout>
 
