set up buttons : login, sign up , main

--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -46,7 +46,7 @@
         />
 
     <Button
-        android:id="@+id/btnLogin"
+        android:id="@+id/btnLog"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Login Now"
@@ -63,7 +63,7 @@
         android:layout_marginTop="40dp"
         android:layout_gravity="center_horizontal"/>
 
-    <TextView
+    <Button
         android:id="@+id/SignUp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
