--- a/app/src/main/res/layout/activity_inscri.xml
+++ b/app/src/main/res/layout/activity_inscri.xml
@@ -68,7 +68,7 @@
         android:layout_marginTop="40dp"
         android:text="Already have an account?" />
 
-    <TextView
+    <Button
         android:id="@+id/Login"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
