--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,35 +1,34 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="wrap_content"
-    android:layout_height="812dp"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
     android:padding="20dp"
-    android:layout_gravity="center"
-    >
-    <RelativeLayout
-        android:id="@+id/btnLogin"
-        android:layout_width="327dp"
-        android:layout_height="62dp"
-        android:background="#FF7622"
-        android:layout_alignParentBottom="true"
-        android:layout_marginBottom="100dp"
-        android:clipToOutline="true"
-        android:layout_centerInParent="true"
-        >
+    android:layout_gravity="center">
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerInParent="true"
-            android:text="GET STARTED"
-            android:textColor="#FFFFFF"
-            android:textAlignment="center"
-            android:textSize="14sp"
-            android:textStyle="bold" />
-    </RelativeLayout>
+    <!-- Logo -->
+    <View
+        android:id="@+id/logo"
 
+        android:layout_width="350dp"
+        android:layout_height="292dp"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="138dp"
+        android:background="@drawable/logo" />
 
-    <!-- Description Text -->
+    <!-- Title -->
+    <TextView
+        android:id="@+id/title"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Welcome to our club"
+        android:textColor="#32343E"
+        android:textAlignment="center"
+        android:textSize="20sp"
+        android:layout_centerHorizontal="true"
+        android:layout_below="@id/logo" />
+
+    <!-- Description -->
     <TextView
         android:layout_width="324dp"
         android:layout_height="wrap_content"
@@ -38,27 +37,21 @@
         android:textAlignment="center"
         android:lineSpacingExtra="4dp"
         android:textSize="16sp"
-        android:layout_alignParentTop="true"
-        android:layout_marginTop="516dp"
-        android:layout_marginStart="25dp" />
+        android:layout_centerHorizontal="true"
+        android:layout_below="@+id/title"
+        android:layout_marginTop="20dp" />
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Welcome to our club"
-        android:textColor="#32343E"
-        android:textAlignment="center"
-        android:textSize="20sp"
-        android:layout_marginStart="71dp"
-        android:layout_marginTop="469dp" />
-
-    <View
-        android:layout_width="350dp"
-        android:layout_height="292dp"
-        android:layout_centerInParent="true"
-        android:layout_alignParentTop="true"
-        android:layout_marginStart="67dp"
-        android:layout_marginTop="138dp"
-        android:background="@drawable/logo"
-        />
+    <!-- Button -->
+    <Button
+        android:id="@+id/btnLogin"
+        android:layout_width="327dp"
+        android:layout_height="62dp"
+        android:background="#FF7622"
+        android:text="GET STARTED"
+        android:textColor="#FFFFFF"
+        android:textSize="14sp"
+        android:textStyle="bold"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="100dp" />
 </RelativeLayout>
