--- a/app/src/main/res/layout/activity_formulaire.xml
+++ b/app/src/main/res/layout/activity_formulaire.xml
@@ -21,28 +21,28 @@
 
         <DatePicker
             android:id="@+id/date_picker"
-            android:layout_width="375dp"
-            android:layout_height="370dp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
             android:layout_below="@id/date_label"
-            android:layout_marginTop="2dp" />
+            android:layout_marginTop="8dp" />
 
         <!-- Client Name -->
         <TextView
-            android:id="@+id/client_name_label"
+            android:id="@+id/Descriptionn"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Client Name"
+            android:text="Description"
             android:textColor="#32343e"
             android:textSize="16sp"
             android:layout_below="@id/date_picker"
             android:layout_marginTop="16dp" />
 
         <EditText
-            android:id="@+id/client_name"
+            android:id="@+id/Description"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="Enter your name"
-            android:layout_below="@id/client_name_label"
+            android:hint="Enter your Description"
+            android:layout_below="@id/Descriptionn"
             android:layout_marginTop="8dp"
             android:padding="12dp"
             android:background="#F0F0F0" />
@@ -55,11 +55,11 @@
             android:text="Select Activity"
             android:textColor="#32343e"
             android:textSize="16sp"
-            android:layout_below="@id/client_name"
+            android:layout_below="@id/Description"
             android:layout_marginTop="16dp" />
 
         <Spinner
-            android:id="@+id/activity_spinner"
+            android:id="@+id/spinner"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_below="@id/activity_label"
@@ -74,11 +74,11 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="Reserve"
-            android:layout_below="@id/activity_spinner"
+            android:layout_below="@id/spinner"
             android:layout_marginTop="16dp"
             android:textColor="#FFFFFF" />
 
-        <!-- Link to Home -->
+        <!-- Link to Home
         <TextView
             android:id="@+id/back_to_home"
             android:layout_width="wrap_content"
@@ -89,7 +89,7 @@
             android:layout_below="@id/reserve_button"
             android:layout_marginTop="16dp"
             android:clickable="true"
-            android:focusable="true" />
+            android:focusable="true" />-->
 
     </RelativeLayout>
 </ScrollView>
