--- a/app/src/main/res/layout/activity_member_list.xml
+++ b/app/src/main/res/layout/activity_member_list.xml
@@ -11,11 +11,25 @@
         android:textSize="24sp"
         android:textStyle="bold"
         android:gravity="center"/>
+    <View
+        android:layout_width="216dp"
+        android:layout_height="3dp"
+        android:background="#FF7622"
+        android:layout_marginTop="10dp"
+        android:layout_marginStart="0dp" />
+    <View
+        android:id="@+id/button"
+        android:layout_width="375dp"
+        android:layout_height="1dp"
+        android:background="#CED7DF"
+        android:layout_marginTop="5dp" />
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/rv_members"
+
+    <ListView
+        android:id="@+id/Client_list_view"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:paddingTop="8dp"/>
+        android:layout_height="wrap_content"
+        android:layout_marginTop="20dp" android:divider="@color/material_blue_grey_800" android:dividerHeight="2dp"/>
+
 
 </LinearLayout>
